# l10n-italy

./: .copier-answers.yml  .pre-commit-config.yaml  README.md  requirements.txt
account_vat_period_end_statement/i18n/: it.po
l10n_it_abicab/: README.rst
l10n_it_abicab/views/: abicab_view.xml
l10n_it_account/: README.rst
l10n_it_account/reports/: account_reports_view.xml
l10n_it_account/views/: account_view.xml
l10n_it_account_stamp/: README.rst  __manifest__.py
l10n_it_account_stamp/models/: account_move.py
l10n_it_appointment_code/: README.rst
l10n_it_appointment_code/views/: appointment_code_view.xml
l10n_it_bill_of_entry/: README.rst
l10n_it_bill_of_entry/demo/: bill_of_entry_demo.xml
l10n_it_bill_of_entry/models/: account_move.py
l10n_it_bill_of_entry/tests/: test_bill_of_entry.py
l10n_it_bill_of_entry/views/: company_view.xml
l10n_it_central_journal/i18n/: it.po
l10n_it_codici_carica/i18n/: it.po
l10n_it_corrispettivi/i18n/: it.po
l10n_it_delivery_note/: README.rst
l10n_it_delivery_note/models/: stock_delivery_note.py  stock_picking.py
l10n_it_delivery_note/readme/: CONTRIBUTORS.md
l10n_it_delivery_note_order_link/: README.rst
l10n_it_fatturapa/i18n/: de.po
l10n_it_fatturapa_out/: README.rst
l10n_it_ricevute_bancarie/: README.rst  __manifest__.py
l10n_it_sct_cbi/: README.rst
l10n_it_sdd_cbi/: README.rst
l10n_it_split_payment/: README.rst  __manifest__.py
l10n_it_vat_registries/: __manifest__.py
l10n_it_withholding_tax/: __manifest__.py
setup/_metapackage/: VERSION.txt  pyproject.toml  setup.py
(+26 files in other folders)
