[project]
name = "odoo-addons-oca-l10n-italy"
version = "18.0.20250410.1"
dependencies = [
    "odoo-addon-l10n_it_abicab==18.0.*",
    "odoo-addon-l10n_it_account==18.0.*",
    "odoo-addon-l10n_it_account_stamp==18.0.*",
    "odoo-addon-l10n_it_appointment_code==18.0.*",
    "odoo-addon-l10n_it_delivery_note==18.0.*",
]
classifiers=[
    "Programming Language :: Python",
    "Framework :: Odoo",
    "Framework :: Odoo :: 18.0",
]
